export interface MedicalCondition {
    id: string;
    code: string;
    name: string;
    description: string;
    commonSymptoms: string[];
}
