// src/app/models/patient.model.ts

export interface Patient {
  medicalRecordNumber: string;
  }
  